--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,3 +1,5 @@
 FROM nginx:alpine
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY index.html /usr/share/nginx/html/
+COPY static/ /usr/share/nginx/html/static/
 EXPOSE 80
